@@ -432,5 +432,33 @@ mvn clean test
 ./mvnw clean test
 ```
 
+# 84. Maven Failsafe Plugin
 
+```xml
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+```
 
+```shell
+mvn clean verify
+./mvnw clean verify
+```
+
+* target/failsafe-repots/...
+* target/surefire-reports/...
